rewrite-json/src/main/java/org/openrewrite/json/internal/grammar/JsonPathParser.java
/*
 * Copyright 2026 the original author or authors.
 * <p>
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * <p>
 * https://www.apache.org/licenses/LICENSE-2.0
 * <p>
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
// Generated from rewrite-json/src/main/antlr/JsonPathParser.g4 by ANTLR 4.13.2
package org.openrewrite.json.internal.grammar;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.ArrayList;
import java.util.Iterator;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class JsonPathParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
    public static final int WS = 1;
    public static final int UTF_8_BOM = 2;
    public static final int MATCHES_REGEX_OPEN = 3;
    public static final int LBRACE = 4;
    public static final int RBRACE = 5;
    public static final int LBRACK = 6;
    public static final int RBRACK = 7;
    public static final int LPAREN = 8;
    public static final int RPAREN = 9;
    public static final int AT = 10;
    public static final int DOT = 11;
    public static final int DOT_DOT = 12;
    public static final int ROOT = 13;
    public static final int WILDCARD = 14;
    public static final int COLON = 15;
    public static final int QUESTION = 16;
    public static final int CONTAINS = 17;
    public static final int TRUE = 18;
    public static final int FALSE = 19;
    public static final int NULL = 20;
    public static final int Identifier = 21;
    public static final int StringLiteral = 22;
    public static final int PositiveNumber = 23;
    public static final int NegativeNumber = 24;
    public static final int NumericLiteral = 25;
    public static final int COMMA = 26;
    public static final int TICK = 27;
    public static final int QUOTE = 28;
    public static final int MATCHES = 29;
    public static final int LOGICAL_OPERATOR = 30;
    public static final int AND = 31;
    public static final int OR = 32;
    public static final int NOT = 33;
    public static final int EQUALITY_OPERATOR = 34;
    public static final int EQ = 35;
    public static final int NE = 36;
    public static final int MATCHES_REGEX_CLOSE = 37;
    public static final int S = 38;
    public static final int REGEX = 39;
    public static final int RULE_jsonPath = 0;
    public static final int RULE_expression = 1;
    public static final int RULE_dotOperator = 2;
    public static final int RULE_recursiveDecent = 3;
    public static final int RULE_bracketOperator = 4;
    public static final int RULE_filter = 5;
    public static final int RULE_filterExpression = 6;
    public static final int RULE_negationExpression = 7;
    public static final int RULE_binaryExpression = 8;
    public static final int RULE_containsExpression = 9;
    public static final int RULE_regexExpression = 10;
    public static final int RULE_unaryExpression = 11;
    public static final int RULE_literalExpression = 12;
    public static final int RULE_property = 13;
    public static final int RULE_wildcard = 14;
    public static final int RULE_slice = 15;
    public static final int RULE_start = 16;
    public static final int RULE_end = 17;
    public static final int RULE_indexes = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"jsonPath", "expression", "dotOperator", "recursiveDecent", "bracketOperator",
			"filter", "filterExpression", "negationExpression", "binaryExpression",
			"containsExpression", "regexExpression", "unaryExpression", "literalExpression",
			"property", "wildcard", "slice", "start", "end", "indexes"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'\\uFEFF'", null, "'{'", "'}'", "'['", "']'", "'('", "')'",
			"'@'", "'.'", "'..'", "'$'", "'*'", "':'", "'?'", "'contains'", "'true'",
			"'false'", "'null'", null, null, null, null, null, "','", "'''", "'\"'",
			"'=~'", null, "'&&'", "'||'", "'!'", null, "'=='", "'!='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "UTF_8_BOM", "MATCHES_REGEX_OPEN", "LBRACE", "RBRACE", "LBRACK",
			"RBRACK", "LPAREN", "RPAREN", "AT", "DOT", "DOT_DOT", "ROOT", "WILDCARD",
			"COLON", "QUESTION", "CONTAINS", "TRUE", "FALSE", "NULL", "Identifier",
			"StringLiteral", "PositiveNumber", "NegativeNumber", "NumericLiteral",
			"COMMA", "TICK", "QUOTE", "MATCHES", "LOGICAL_OPERATOR", "AND", "OR",
			"NOT", "EQUALITY_OPERATOR", "EQ", "NE", "MATCHES_REGEX_CLOSE", "S", "REGEX"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JsonPathParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JsonPathParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JsonPathContext extends ParserRuleContext {
		public TerminalNode ROOT() { return getToken(JsonPathParser.ROOT, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public JsonPathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jsonPath; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof JsonPathParserListener) {
                ((JsonPathParserListener) listener).enterJsonPath(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof JsonPathParserListener) {
                ((JsonPathParserListener) listener).exitJsonPath(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof JsonPathParserVisitor) {
                return ((JsonPathParserVisitor<? extends T>) visitor).visitJsonPath(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final JsonPathContext jsonPath() throws RecognitionException {
		JsonPathContext _localctx = new JsonPathContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_jsonPath);
		try {
			int _alt;
			setState(50);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ROOT:
				enterOuterAlt(_localctx, 1);
				{
				setState(38);
				match(ROOT);
				setState(42);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(39);
						expression();
						}
						}
					}
					setState(44);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				}
				}
				break;
			case LBRACK:
			case DOT:
			case DOT_DOT:
				enterOuterAlt(_localctx, 2);
				{
				setState(46);
				_errHandler.sync(this);
				_alt = 1;
				do {
                    if (_alt == 1) {
                        {
                            setState(45);
                            expression();
                        }
                    } else {
                        throw new NoViableAltException(this);
                    }
					setState(48);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public TerminalNode DOT() { return getToken(JsonPathParser.DOT, 0); }
		public DotOperatorContext dotOperator() {
			return getRuleContext(DotOperatorContext.class,0);
		}
		public RecursiveDecentContext recursiveDecent() {
			return getRuleContext(RecursiveDecentContext.class,0);
		}
		public BracketOperatorContext bracketOperator() {
			return getRuleContext(BracketOperatorContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof JsonPathParserListener) {
                ((JsonPathParserListener) listener).enterExpression(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof JsonPathParserListener) {
                ((JsonPathParserListener) listener).exitExpression(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof JsonPathParserVisitor) {
                return ((JsonPathParserVisitor<? extends T>) visitor).visitExpression(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expression);
		try {
			setState(56);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DOT:
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				match(DOT);
				setState(53);
				dotOperator();
				}
				break;
			case DOT_DOT:
				enterOuterAlt(_localctx, 2);
				{
				setState(54);
				recursiveDecent();
				}
				break;
			case LBRACK:
				enterOuterAlt(_localctx, 3);
				{
				setState(55);
				bracketOperator();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DotOperatorContext extends ParserRuleContext {
		public BracketOperatorContext bracketOperator() {
			return getRuleContext(BracketOperatorContext.class,0);
		}
		public PropertyContext property() {
			return getRuleContext(PropertyContext.class,0);
		}
		public WildcardContext wildcard() {
			return getRuleContext(WildcardContext.class,0);
		}
		public DotOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dotOperator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof JsonPathParserListener) {
                ((JsonPathParserListener) listener).enterDotOperator(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof JsonPathParserListener) {
                ((JsonPathParserListener) listener).exitDotOperator(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof JsonPathParserVisitor) {
                return ((JsonPathParserVisitor<? extends T>) visitor).visitDotOperator(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final DotOperatorContext dotOperator() throws RecognitionException {
		DotOperatorContext _localctx = new DotOperatorContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dotOperator);
		try {
			setState(61);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LBRACK:
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				bracketOperator();
				}
				break;
			case Identifier:
			case StringLiteral:
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				property();
				}
				break;
			case WILDCARD:
				enterOuterAlt(_localctx, 3);
				{
				setState(60);
				wildcard();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RecursiveDecentContext extends ParserRuleContext {
		public TerminalNode DOT_DOT() { return getToken(JsonPathParser.DOT_DOT, 0); }
		public DotOperatorContext dotOperator() {
			return getRuleContext(DotOperatorContext.class,0);
		}
		public RecursiveDecentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recursiveDecent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof JsonPathParserListener) {
                ((JsonPathParserListener) listener).enterRecursiveDecent(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof JsonPathParserListener) {
                ((JsonPathParserListener) listener).exitRecursiveDecent(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof JsonPathParserVisitor) {
                return ((JsonPathParserVisitor<? extends T>) visitor).visitRecursiveDecent(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final RecursiveDecentContext recursiveDecent() throws RecognitionException {
		RecursiveDecentContext _localctx = new RecursiveDecentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_recursiveDecent);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(DOT_DOT);
			setState(64);
			dotOperator();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BracketOperatorContext extends ParserRuleContext {
		public TerminalNode LBRACK() { return getToken(JsonPathParser.LBRACK, 0); }
		public TerminalNode RBRACK() { return getToken(JsonPathParser.RBRACK, 0); }
		public FilterContext filter() {
			return getRuleContext(FilterContext.class,0);
		}
		public SliceContext slice() {
			return getRuleContext(SliceContext.class,0);
		}
		public IndexesContext indexes() {
			return getRuleContext(IndexesContext.class,0);
		}
		public List<PropertyContext> property() {
			return getRuleContexts(PropertyContext.class);
		}
		public PropertyContext property(int i) {
			return getRuleContext(PropertyContext.class,i);
		}
		public BracketOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bracketOperator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof JsonPathParserListener) {
                ((JsonPathParserListener) listener).enterBracketOperator(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof JsonPathParserListener) {
                ((JsonPathParserListener) listener).exitBracketOperator(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof JsonPathParserVisitor) {
                return ((JsonPathParserVisitor<? extends T>) visitor).visitBracketOperator(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final BracketOperatorContext bracketOperator() throws RecognitionException {
		BracketOperatorContext _localctx = new BracketOperatorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_bracketOperator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(LBRACK);
			setState(75);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(67);
				filter();
				}
				break;
			case 2:
				{
				setState(68);
				slice();
				}
				break;
			case 3:
				{
				setState(69);
				indexes();
				}
				break;
			case 4:
				{
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(70);
					property();
					}
					}
					setState(73);
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==Identifier || _la==StringLiteral );
				}
				break;
			}
			setState(77);
			match(RBRACK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FilterContext extends ParserRuleContext {
		public TerminalNode QUESTION() { return getToken(JsonPathParser.QUESTION, 0); }
		public TerminalNode LPAREN() { return getToken(JsonPathParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(JsonPathParser.RPAREN, 0); }
		public List<FilterExpressionContext> filterExpression() {
			return getRuleContexts(FilterExpressionContext.class);
		}
		public FilterExpressionContext filterExpression(int i) {
			return getRuleContext(FilterExpressionContext.class,i);
		}
		public FilterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof JsonPathParserListener) {
                ((JsonPathParserListener) listener).enterFilter(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof JsonPathParserListener) {
                ((JsonPathParserListener) listener).exitFilter(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof JsonPathParserVisitor) {
                return ((JsonPathParserVisitor<? extends T>) visitor).visitFilter(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final FilterContext filter() throws RecognitionException {
		FilterContext _localctx = new FilterContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_filter);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(QUESTION);
			setState(80);
			match(LPAREN);
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(81);
				filterExpression();
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (_la & ~0x3F) == 0 && ((1L << _la) & 8654699584L) != 0 );
			setState(86);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FilterExpressionContext extends ParserRuleContext {
		public BinaryExpressionContext binaryExpression() {
			return getRuleContext(BinaryExpressionContext.class,0);
		}
		public RegexExpressionContext regexExpression() {
			return getRuleContext(RegexExpressionContext.class,0);
		}
		public ContainsExpressionContext containsExpression() {
			return getRuleContext(ContainsExpressionContext.class,0);
		}
		public UnaryExpressionContext unaryExpression() {
			return getRuleContext(UnaryExpressionContext.class,0);
		}
		public NegationExpressionContext negationExpression() {
			return getRuleContext(NegationExpressionContext.class,0);
		}
		public FilterExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filterExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof JsonPathParserListener) {
                ((JsonPathParserListener) listener).enterFilterExpression(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof JsonPathParserListener) {
                ((JsonPathParserListener) listener).exitFilterExpression(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof JsonPathParserVisitor) {
                return ((JsonPathParserVisitor<? extends T>) visitor).visitFilterExpression(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final FilterExpressionContext filterExpression() throws RecognitionException {
		FilterExpressionContext _localctx = new FilterExpressionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_filterExpression);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				binaryExpression(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				regexExpression();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(90);
				containsExpression();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(91);
				unaryExpression();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(92);
				negationExpression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NegationExpressionContext extends ParserRuleContext {
		public TerminalNode NOT() { return getToken(JsonPathParser.NOT, 0); }
		public TerminalNode LPAREN() { return getToken(JsonPathParser.LPAREN, 0); }
		public FilterExpressionContext filterExpression() {
			return getRuleContext(FilterExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(JsonPathParser.RPAREN, 0); }
		public UnaryExpressionContext unaryExpression() {
			return getRuleContext(UnaryExpressionContext.class,0);
		}
		public NegationExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_negationExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof JsonPathParserListener) {
                ((JsonPathParserListener) listener).enterNegationExpression(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof JsonPathParserListener) {
                ((JsonPathParserListener) listener).exitNegationExpression(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof JsonPathParserVisitor) {
                return ((JsonPathParserVisitor<? extends T>) visitor).visitNegationExpression(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final NegationExpressionContext negationExpression() throws RecognitionException {
		NegationExpressionContext _localctx = new NegationExpressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_negationExpression);
		try {
			setState(102);
			_errHandler.sync(this);
            if (getInterpreter().adaptivePredict(_input, 9, _ctx) == 1) {
                enterOuterAlt(_localctx, 1);
                setState(95);
                match(NOT);
                setState(96);
                match(LPAREN);
                setState(97);
                filterExpression();
                setState(98);
                match(RPAREN);
            } else if (getInterpreter().adaptivePredict(_input, 9, _ctx) == 2) {
                enterOuterAlt(_localctx, 2);
                setState(100);
                match(NOT);
                setState(101);
                unaryExpression();
            }
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BinaryExpressionContext extends ParserRuleContext {
		public List<RegexExpressionContext> regexExpression() {
			return getRuleContexts(RegexExpressionContext.class);
		}
		public RegexExpressionContext regexExpression(int i) {
			return getRuleContext(RegexExpressionContext.class,i);
		}
		public TerminalNode LOGICAL_OPERATOR() { return getToken(JsonPathParser.LOGICAL_OPERATOR, 0); }
		public List<BinaryExpressionContext> binaryExpression() {
			return getRuleContexts(BinaryExpressionContext.class);
		}
		public BinaryExpressionContext binaryExpression(int i) {
			return getRuleContext(BinaryExpressionContext.class,i);
		}
		public List<ContainsExpressionContext> containsExpression() {
			return getRuleContexts(ContainsExpressionContext.class);
		}
		public ContainsExpressionContext containsExpression(int i) {
			return getRuleContext(ContainsExpressionContext.class,i);
		}
		public List<NegationExpressionContext> negationExpression() {
			return getRuleContexts(NegationExpressionContext.class);
		}
		public NegationExpressionContext negationExpression(int i) {
			return getRuleContext(NegationExpressionContext.class,i);
		}
		public UnaryExpressionContext unaryExpression() {
			return getRuleContext(UnaryExpressionContext.class,0);
		}
		public TerminalNode EQUALITY_OPERATOR() { return getToken(JsonPathParser.EQUALITY_OPERATOR, 0); }
		public LiteralExpressionContext literalExpression() {
			return getRuleContext(LiteralExpressionContext.class,0);
		}
		public BinaryExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binaryExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof JsonPathParserListener) {
                ((JsonPathParserListener) listener).enterBinaryExpression(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof JsonPathParserListener) {
                ((JsonPathParserListener) listener).exitBinaryExpression(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof JsonPathParserVisitor) {
                return ((JsonPathParserVisitor<? extends T>) visitor).visitBinaryExpression(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final BinaryExpressionContext binaryExpression() throws RecognitionException {
		return binaryExpression(0);
	}
